--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>2.29</version>
+        <version>3.47</version>
     </parent>
 
     <artifactId>deploy</artifactId>
@@ -37,10 +37,14 @@
             <id>frekele</id>
             <name>Leandro Kersting de Freitas</name>
         </developer>
+        <developer>
+            <id>jansohn</id>
+            <name>Robin Jansohn</name>
+        </developer>
     </developers>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.level>7</java.level>
         <cargo.version>1.6.5</cargo.version>
         <jenkins.version>1.642.3</jenkins.version>
         <workflow-cps-plugin.version>2.15</workflow-cps-plugin.version>
