--- a/pom.xml
+++ b/pom.xml
@@ -44,18 +44,23 @@
     </developers>
 
     <properties>
-        <java.level>7</java.level>
-        <cargo.version>1.6.5</cargo.version>
-        <jenkins.version>1.642.3</jenkins.version>
-        <workflow-cps-plugin.version>2.15</workflow-cps-plugin.version>
+        <java.level>8</java.level>
+        <cargo.version>1.7.6</cargo.version>
+        <jenkins.version>2.138.4</jenkins.version>
+        <workflow-cps.version>2.72</workflow-cps.version>
     </properties>
 
     <dependencies>
 
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>structs</artifactId>
+            <version>1.18</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>credentials</artifactId>
-            <version>2.1.13</version>
+            <version>2.2.0</version>
         </dependency>
 
         <dependency>
@@ -78,6 +83,10 @@
                 <exclusion>
                     <groupId>org.apache.ant</groupId>
                     <artifactId>ant</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.ant</groupId>
+                    <artifactId>ant-launcher</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -109,7 +118,7 @@
         <dependency>
             <groupId>org.glassfish.main.deployment</groupId>
             <artifactId>deployment-client</artifactId>
-            <version>3.1.2</version>
+            <version>4.1.2</version>
         </dependency>
 
         <dependency>
@@ -118,52 +127,35 @@
             <version>1.4.01</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>structs</artifactId>
-            <version>1.5</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jenkins-ci.plugins.workflow</groupId>
-            <artifactId>workflow-job</artifactId>
-            <version>2.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jenkins-ci.plugins.workflow</groupId>
-            <artifactId>workflow-api</artifactId>
-            <version>2.0</version>
-            <scope>test</scope>
-        </dependency>
+        <!-- test dependencies -->
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-basic-steps</artifactId>
-            <version>2.5</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jenkins-ci.plugins.workflow</groupId>
-            <artifactId>workflow-step-api</artifactId>
-            <version>2.9</version>
+            <version>2.18</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-cps</artifactId>
-            <version>${workflow-cps-plugin.version}</version>
+            <version>${workflow-cps.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-job</artifactId>
+            <version>2.33</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-durable-task-step</artifactId>
-            <version>1.14</version>
+            <version>2.32</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-cps</artifactId>
-            <version>${workflow-cps-plugin.version}</version>
+            <version>${workflow-cps.version}</version>
             <classifier>tests</classifier>
             <scope>test</scope>
         </dependency>
