--- a/pom.xml
+++ b/pom.xml
@@ -45,9 +45,18 @@
 
     <properties>
         <java.level>8</java.level>
-        <cargo.version>1.7.6</cargo.version>
         <jenkins.version>2.138.4</jenkins.version>
+        <structs.version>1.18</structs.version>
+        <credentials.version>2.2.0</credentials.version>
+        <cargo.version>1.7.6</cargo.version>
+        <deployment-client.version>3.1.2</deployment-client.version>
+        <xml-apis.version>1.4.01</xml-apis.version>
+        <workflow-step-api.version>2.20</workflow-step-api.version>
+        <workflow-api.version>2.34</workflow-api.version>
         <workflow-cps.version>2.72</workflow-cps.version>
+        <workflow-basic-steps.version>2.16.1</workflow-basic-steps.version>
+        <workflow-job.version>2.33</workflow-job.version>
+        <workflow-durable-task-step.version>2.28</workflow-durable-task-step.version>
     </properties>
 
     <dependencies>
@@ -55,12 +64,12 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>structs</artifactId>
-            <version>1.18</version>
+            <version>${structs.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>credentials</artifactId>
-            <version>2.2.0</version>
+            <version>${credentials.version}</version>
         </dependency>
 
         <dependency>
@@ -118,20 +127,26 @@
         <dependency>
             <groupId>org.glassfish.main.deployment</groupId>
             <artifactId>deployment-client</artifactId>
-            <version>5.1.0</version>
+            <version>${deployment-client.version}</version>
         </dependency>
 
         <dependency>
             <groupId>xml-apis</groupId>
             <artifactId>xml-apis</artifactId>
-            <version>1.4.01</version>
+            <version>${xml-apis.version}</version>
         </dependency>
 
         <!-- test dependencies -->
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
-            <artifactId>workflow-basic-steps</artifactId>
-            <version>2.18</version>
+            <artifactId>workflow-step-api</artifactId>
+            <version>${workflow-step-api.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-api</artifactId>
+            <version>${workflow-api.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -142,14 +157,20 @@
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-basic-steps</artifactId>
+            <version>${workflow-basic-steps.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-job</artifactId>
-            <version>2.33</version>
+            <version>${workflow-job.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-durable-task-step</artifactId>
-            <version>2.32</version>
+            <version>${workflow-durable-task-step.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
